--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,12 @@ jobs:
     docker:
       -  image: cimg/base:stable
     environment:
-      7DIGITS: 7777777
+      DIGITS: 7777777
     steps:
       - checkout
       - run:
-          name: Logging 7DIGITS ENV variable
-          command: echo $7DIGITS
+          name: Logging DIGITS ENV variable
+          command: echo $DIGITS
 
 workflows:
     run-jobs:
